<resources>
    <!-- Reusable strings -->
    <string name="app_name">CultiBot</string>
    <string name="backButton">Volver</string>
    <string name="BluetoothAddressIntentKey">BTAddress</string>
    <string name="SensorsDataIntentKey">SENSORS_DATA</string>
    <string name="BLUETOOTH_REPORT_COMMAND">G</string>
    <string name="BLUETOOTH_WATER_COMMAND">P</string>
    <string name="CommandIntentKey">COMMAND</string>
    <string name="cancelText">Cancelar</string>
    <string name="waitingForValue">…</string>
    <string name="grade">°</string>
    <string name="percentage">%</string>

    <!-- Activities Labels -->
    <string name="labelLoginActivity">Login</string>
    <string name="labelMainActivity">Inicio</string>
    <string name="labelDeviceListActivity">Dispositivos</string>
    <string name="labelSensorsActivity">Estado del sistema</string>

    <!-- Login Activity -->
    <string name="welcomeText">¡Bienvenido!</string>
    <string name="inputDate">Fecha de nacimiento</string>
    <string name="inputName">Nombre</string>
    <string name="submitButton">Ingresar</string>
    <string name="invalidDate">Ingrese una fecha valida (dd/mm/AAAA)</string>
    <string name="errorText">MENSAJE DE ERROR</string>

    <!-- Main Activity -->
    <string name="btnCheckState">Chequear estado</string>
    <string name="btnConnectDevice">Conectar dispositivo</string>
    <string name="lackOfPermissions">ATENCION: La aplicación no funcionara correctamente debido a la falta de Permisos</string>

    <!-- Sensors Activity -->
    <string name="statusText">Estado</string>
    <string name="temperatureText">Temperatura</string>
    <string name="lightText">Luminosidad</string>
    <string name="humidityText">Humedad</string>
    <string name="refreshButton">Riego</string>
    <string name="updatingStatusText">Obteniendo data de sensores…</string>
    <string name="statusUpdateFailure">Error al actualizar estado!</string>
    <string name="updatedStatusText">Actualizado</string>
    <string name="temp">temp</string>
    <string name="light">light</string>
    <string name="hum">hum</string>
    <string name="dataFetchFailure">Error al procesar información</string>

    <!-- DeviceList Activity -->
    <string name="deviceListMainText">Lista de dispositivos</string>
    <string name="btnFindDevices">Buscar Dispositivos</string>
    <string name="pairedDevice">Dispositivo conectado</string>
    <string name="deviceUnpaired">Dispositivo desconectado</string>
    <string name="pairText">Conectar</string>
    <string name="unpairText">Desconectar</string>
    <string name="bluetoothNotSupported">Bluetooth no soportado por el dispositivo</string>
    <string name="bluetoothDisabled">Bluetooth deshabilitado</string>
    <string name="bluetoothEnabled">Bluetooth habilitado</string>
    <string name="pairingText">Conectando…</string>
    <string name="onDiscoveryText">Buscando dispositivos…</string>

    <!-- Bluetooth Service -->
    <string name="socketCreationFailure">Fallo la creación del socket.</string>
    <string name="socketConnectionFailure">Fallo la conexion del socket.</string>
    <string name="socketDesconnectionFailure">Fallo la desconexion del socket.</string>
    <string name="IOStreamFailure">Imposible establecer canal de comunicacion!</string>
    <string name="OutStreamWriteFailure">Ocurrio un error al comunicarse con el HC05</string>
    <string name="waterSuccessMsg">Planta regada exitosamente</string>


</resources>