<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceListActivity">

    <TextView
        android:id="@+id/deviceListMainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/deviceListMainText"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/deviceList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/deviceList"
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceListMainText" />

    <Button
        android:id="@+id/btnFindDevices"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnFindDevices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceList" />

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:onClick="gotoMainActivity"
        android:text="@string/backButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceList" />

</androidx.constraintlayout.widget.ConstraintLayout>